# word_otter

./: .gitignore  Cargo.toml  README.md  count_pos.sh  filter_words.sh  wikitionary_extract.sh  wiktionary_extract.sh
scripts/: README.md  tests.py  words_from_wiktionary.py
src/: bigint_dashu.rs  bigint_rug.rs  implementation.rs  lib.rs  main.rs
