[package]
name = "word_otter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
force-cross = ["gmp-mpfr-sys/force-cross"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
rand = "0.8.5"
regex = "1.10.4"
rug = "1.19.2"
unicode-normalization = "0.1.22"
gmp-mpfr-sys = "~1.6"
