[package]
name = "word_otter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dashu = [ "dep:dashu" ]
force-cross = ["gmp-mpfr-sys/force-cross"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
rand = "0.8.5"
regex = "1.10.4"
dashu = { version = "0.4.2", features = ["rand"], optional = true }
unicode-normalization = "0.1.22"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
rug = "1.26.1"
gmp-mpfr-sys = "~1.6"

[target.'cfg(not(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
dashu = { version = "0.4.2", features = ["rand"] }
