[package]
name = "word_otter"
version = "0.3.0"
edition = "2021"

[lib]
name = "libword_otter"
crate-type = ["cdylib", "rlib"]

[features]
dashu = [ "dep:dashu" ]
force-cross = ["gmp-mpfr-sys/force-cross"]
gzip = [ "dep:flate2" ]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
rand = "0.8.5"
regex = "1.10.4"
dashu = { version = "0.4.2", features = ["rand"], optional = true }
unicode-normalization = "0.1.22"
itertools = "0.13.0"
flate2 = { version = "1.0.33", optional = true }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["serde_derive"] }

# only included to set the js feature to allow building for wasm32-unknown-unknown
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.93"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
rug = "1.26.1"
gmp-mpfr-sys = "~1.6"

[target.'cfg(not(any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
dashu = { version = "0.4.2", features = ["rand"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.70"
